# omnivore

./: .dockerignore  .gitignore  .vercelignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.musl  INSTALLATION.md  ISSUES.md  LICENSE-MIT  Makefile  PUBLISHING.md  README.md  SETUP_COMPLETE.md  crawl-results.json  docker-compose.prod.yml  docker-compose.yml  env.example  index.html  install.sh  mkdocs.yml  new.md  omnivore.rb  parser-rules.yaml  publish.sh  vercel.json
.cargo/: audit.toml
.github/workflows/: ci.yml  homebrew-test.yml  release.yml
Formula/: .gitignore  Makefile  README.md  omnivore.rb
completions/: _omnivore  _omnivore.ps1  omnivore.bash  omnivore.fish
configs/: crawler.toml
docs/: cli-crawl.md  cli-git.md  cli.md  configuration.md  index.md  installation.md  quickstart.md
docs-site/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
docs-site/app/: globals.css  layout.tsx  page.tsx
docs-site/app/docs/: layout.tsx  page.tsx
docs-site/app/docs/cli/: page.tsx
docs-site/app/docs/configuration/: page.tsx
docs-site/app/docs/crawler/: page.tsx
docs-site/app/docs/installation/: page.tsx
docs-site/app/docs/knowledge-graphs/: page.tsx
docs-site/app/docs/processing/: page.tsx
docs-site/app/docs/quickstart/: page.tsx
docs-site/components/: CodeBlock.tsx  CopyCodeClient.tsx  ThemeToggle.tsx
docs/api/: graphql.md  rest.md
docs/architecture/: crawler.md  knowledge-graph.md  overview.md  parser.md  storage.md
docs/deployment/: docker.md  homebrew.md
docs/development/: build.md  contributing.md
docs/examples/: basic-crawl.md
docs/guides/: extractors.md  politeness.md
docs/tutorials/: graph-from-site.md
monitoring/: prometheus.yml
nginx/: nginx.conf
omnivore-api/: Cargo.toml
omnivore-api/src/: main.rs
omnivore-cli/: Cargo.toml  README.md
omnivore-cli/src/: main.rs  setup.rs
omnivore-cli/src/git/: command.rs  detector.rs  filter.rs  mod.rs  organizer.rs  output.rs  source.rs  utils.rs
omnivore-cli/tests/: git_integration.rs
omnivore-core/: Cargo.toml  README.md
omnivore-core/benches/: crawler_bench.rs
omnivore-core/src/: ai.rs  browser.rs  config.rs  detector.rs  error.rs  extractor.rs  lib.rs  table_extractor.rs
omnivore-core/src/crawler/: browser.rs  frontier.rs  mod.rs  politeness.rs  robots.rs  scheduler.rs  worker.rs
omnivore-core/src/graph/: builder.rs  mod.rs  query.rs  schema.rs
omnivore-core/src/intelligence/: embeddings.rs  entity.rs  mod.rs  relations.rs
omnivore-core/src/parser/: extractors.rs  html.rs  mod.rs  schema.rs
omnivore-core/src/storage/: graph_db.rs  kv.rs  mod.rs  vector_db.rs
omnivore-core/tests/: crawler_test.rs  parser_test.rs
scripts/: build-completions.sh  create-release.sh  init-db.sql  test-docker-build.sh
