[workspace]
resolver = "2"
members = [
    "omnivore-core",
    "omnivore-cli",
    "omnivore-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Omnivore Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pranav-Karra-3301/omnivore"
homepage = "https://github.com/Pranav-Karra-3301/omnivore"
documentation = "https://docs.rs/omnivore"
keywords = ["crawler", "web-scraping", "knowledge-graph", "async", "parallel"]
categories = ["web-programming", "network-programming", "data-structures"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "rustls-tls"] }
hyper = "1.6"
url = "2.5"

# Browser automation
thirtyfour = "0.36"

# HTML parsing and processing
scraper = "0.22"
html5ever = "0.29"
select = "0.6"
regex = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
indicatif = "0.17"
colored = "2.2"

# API frameworks
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "compression-br", "compression-gzip", "trace"] }
async-graphql = "7.0"
async-graphql-axum = "7.0"

# Database and storage
rocksdb = "0.22"
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros", "migrate"] }

# Graph processing
petgraph = "0.6"

# Data structures
dashmap = "6.1"
indexmap = "2.7"
priority-queue = "2.1"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
arc-swap = "1.7"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

# Testing
mockito = "1.6"
proptest = "1.6"
criterion = "0.6"
tempfile = "3.14"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Rate limiting
governor = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"