[package]
name = "omnivore-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/omnivore-api"
description = "REST and GraphQL API for Omnivore web crawler"

[[bin]]
name = "omnivore-api"
path = "src/main.rs"

[dependencies]
omnivore-core = { path = "../omnivore-core" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# OpenAPI documentation
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

[dev-dependencies]
tower = { workspace = true }
hyper = { workspace = true }