[package]
name = "omnivore-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/omnivore-cli"
description = "Command-line interface for Omnivore web crawler"

[lib]
name = "omnivore_cli"
path = "src/lib.rs"

[[bin]]
name = "omnivore"
path = "src/main.rs"

[dependencies]
omnivore-core = { version = "0.1.1", path = "../omnivore-core" }

# CLI
clap = { workspace = true }
clap_complete = "4.5"
indicatif = { workspace = true }
colored = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
url = { workspace = true }

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"
tui-input = "0.11"

# Configuration
config = "0.14"
dirs = "5.0"

# Git functionality
git2 = { version = "0.19", features = ["vendored-openssl"] }
ignore = "0.4"
globset = "0.4"
tempfile = { workspace = true }
walkdir = "2.5"
encoding_rs = "0.8"
csv = "1.3"
zip = "2.2"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.1"