[package]
name = "omnivore-cli"
version = "0.2.0"
edition = "2021"
authors = ["Pranav Karra <pranav.karra@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pranav-Karra-3301/omnivore"
homepage = "https://ov.pranavkarra.me"
documentation = "https://docs.rs/omnivore-cli"
description = "Universal web scraper and code extractor CLI - crawl websites, analyze repositories, build knowledge graphs"
keywords = ["crawler", "web-scraping", "git", "code-analysis", "cli"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
readme = "README.md"

[lib]
name = "omnivore_cli"
path = "src/lib.rs"

[[bin]]
name = "omnivore"
path = "src/main.rs"

[dependencies]
omnivore-core = "0.1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
clap_complete = "4.5"
indicatif = "0.17"
colored = "2.1"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "fmt", "ansi"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"
tui-input = "0.11"

# Configuration
config = "0.14"
dirs = "5.0"
dialoguer = "0.11"
which = "7.0"

# Git functionality
git2 = { version = "0.19", features = ["vendored-openssl"] }
ignore = "0.4"
globset = "0.4"
tempfile = "3.14"
walkdir = "2.5"
encoding_rs = "0.8"
csv = "1.3"
zip = "2.2"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"