[package]
name = "omnivore-core"
version = "0.1.1"
edition = "2021"
authors = ["Pranav Karra <pranav.karra@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pranav-Karra-3301/omnivore"
homepage = "https://ov.pranavkarra.me"
documentation = "https://docs.rs/omnivore-core"
description = "Core crawler and knowledge graph engine for Omnivore - web scraping, AI extraction, browser automation"
keywords = ["crawler", "web-scraping", "knowledge-graph", "async", "browser"]
categories = ["web-programming", "network-programming", "data-structures"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "rustls-tls"] }
hyper = "1.6"
url = "2.5"

# Browser automation
thirtyfour = "0.36"

# HTML parsing
scraper = "0.22"
html5ever = "0.29"
select = "0.6"
regex = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "fmt", "ansi"] }

# Database and storage
rocksdb = "0.22"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"], optional = true }

# Graph processing
petgraph = "0.6"

# Data structures
dashmap = "6.1"
indexmap = "2.7"
priority-queue = "2.1"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
arc-swap = "1.7"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
dirs = "5.0"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Rate limiting
governor = "0.7"

# Additional crawler-specific deps
robotstxt = "0.3"
mime = "0.3"
encoding_rs = "0.8"

[dev-dependencies]
mockito = "1.6"
proptest = "1.5"
criterion = "0.5"
tempfile = "3.14"

[features]
default = ["full"]
full = ["graph-db", "vector-store", "browser"]
graph-db = ["sqlx"]
vector-store = []
browser = []

[[bench]]
name = "crawler_bench"
harness = false